--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
-app_login:
+inicio:
    path: /
-   controller: App\Controller\SecurityController::login
+   controller: App\Controller\InicioController::index
+# app_login:
+#    path: /
+#    controller: App\Controller\SecurityController::login
